exfat: Add support for masquerading as Tuxera's exFAT driver
Our stock kernel comes with Tuxera's proprietary exFAT driver (texfat)
as a module, so the stock ROM's vold tries to mount exFAT filesystems
using texfat. We use sdFAT instead for interacting with exFAT
filesystems and can't integrate Tuxera's driver due to its proprietary
nature, so add a config option to make sdFAT register itself under the
"texfat" name to make the stock ROM happy.

This is a cleaner version of the following commit: artem/android_kernel_sony_msm8996@d1bb50dd
* Aquarius223: Changed to namjaejeon linux-exfat-oot

Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Change-Id: I8d09af7c4e104d6ac67a41987718b52478f4165e

--- a/Kconfig
+++ b/Kconfig
@@ -19,3 +19,10 @@ config EXFAT_DEFAULT_IOCHARSET
 	  converting between the encoding is used for user visible filename and
 	  UTF-16 character that exfat filesystem use, and can be overridden with
 	  the "iocharset" mount option for exFAT filesystems.
+
+config EXFAT_FOR_TEXFAT
+	bool "Register exFAT as Tuxera exFAT"
+	depends on EXFAT_FS
+	default n
+	help
+	  If you want to register exFAT as available for Tuxera exFAT (texfat), say Y..
